--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -12,6 +12,8 @@ nlu:
       - До свидания
       - Пока
       - Увидимся
+      - Чао
+      - Гудбай
 
   - intent: ask_architecture
     examples: |
@@ -19,6 +21,15 @@ nlu:
       - Какие подходы существуют в архитектуре?
       - Что такое микросервисная архитектура?
       - Как выбрать архитектуру ПО?
+
+  - intent: ask_pattern
+    examples: | 
+      - Какие паттерны проектирования существуют в архитектуре ПО?
+      - Какие паттерны использовать в архитектуре ПО?
+      - Что такое паттерн MVC?
+      - Что такое паттерн DAO?
+      - Что такое паттерн Facade?
+      - Что такое паттерн?  
 
   - intent: affirm
     examples: |
