--- a/domain.yml
+++ b/domain.yml
@@ -8,6 +8,7 @@ intents:
   - affirm
   - deny
   - request_info
+  - ask_pattern
 
 responses:
   utter_greet:
@@ -22,8 +23,13 @@ responses:
   utter_acknowledge:
     - text: "Понял, расскажите подробнее о вашем проекте или задачах."
 
+  utter_ask_pattern:
+    - text: "Паттерн в общем и целом - это устоявшийся подход к решению задачи. Давай, обсудим твой вопрос более детально"
+
   utter_architecture_response:
     - text: "Архитектура ПО включает выбор структур, которые обеспечивают масштабируемость, гибкость и поддерживаемость приложения. Задайте конкретный вопрос по этой теме, и я помогу вам с информацией."
+  utter_default:
+    - text: "Уточните вопрос"
 
 entities:
   - topic
