--- a/data/rules.yml
+++ b/data/rules.yml
@@ -20,3 +20,8 @@ rules:
     steps:
       - intent: request_info
       - action: utter_ask_more
+
+  - rule: fallback rule
+    steps:
+      - action: action_default_fallback
+      - action: utter_default    
